Changes for v6 Release (#31)
* Upgrading all the libraries (except for Ink).
* Introduction of IntentBot and IntentBotResponse
* No more debug values
* The way scores are handled. Now returned as MatcherScores inside the IntentBotResponse
* The the matched intent is also in the IntentBotResponse
* IntentMatchers should now return NoIntentMatch instead of null
* Removal of default phrases and the introduction of the RepromptGenerator interface so bots can generate custom reprompts.
* Removal of Jodatime
* Upgrade to latest OpenNLP. Doc trainier no longer accepts tokenizer parameter. Always uses whitespace tokenizer so build scripts will need changing